<resources>
    <string name="app_name">Agendapp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="next">Next</string>
    <string name="addEventTitle">New event</string>
    <string name="enterTitleAndDescription">Please write the title and description of your event</string>
    <string name="enterTimeAndRecurrence">Please select the event type and time</string>
    <string name="eventTitle">Title</string>
    <string name="eventTitlePlaceholder">Enter a title</string>
    <string name="title_empty_error">Title cannot be empty</string>
...
    <string name="eventDescriptionPlaceholder">Describe the event</string>
    <string name="eventDescription">Description</string>
    <string name="goBack">Go Back</string>
    <string name="selectAttendants">Select the person attending this event.</string>
    <string name="startTime">Start time</string>
    <string name="endTime">End time</string>
    <string name="startDatePickerLabel">Start date</string>
    <string name="endDatePickerLabel">End date</string>
    <string name="recurrenceEndPickerLabel">Recurrence end</string>
    <string name="recurrenceMenuLabel">Recurrence</string>
    <string name="extra_event_label">Extra event</string>
    <string name="extra_event_description_on">This event is marked as extra and will not be paid hourly.</string>
    <string name="extra_event_description_off">This event will be treated as a regular event.</string>
...
        <item quantity="other">Send %d requests</item>
    </plurals>
    <plurals name="replacement_selected_members">
        <item quantity="one">Selected member: %s</item>
        <item quantity="other">Selected members: %s</item>
    </plurals>
    <string name="replacement_selected_members_none">
    No member selected
</string>
    <string name="replacement_upcoming_empty_message">
    No upcoming replacements
</string>
    <string name="replacement_requests_sent_success">
...
